--- a/package.json
+++ b/package.json
@@ -18,12 +18,13 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "express-async-handler": "^1.2.0",
     "express-rate-limit": "^6.7.0",
     "helmet": "^7.0.0",
     "install": "^0.13.0",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.13.0",
-    "mongoose": "^8.12.1",
+    "mongoose": "^8.13.0",
     "morgan": "^1.10.0",
     "npm": "^11.1.0",
     "winston": "^3.8.2"
