--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "mongodb": "^6.13.0",
     "mongoose": "^8.13.0",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.2",
     "npm": "^11.1.0",
     "winston": "^3.8.2"
   },
