--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.2",
     "npm": "^11.1.0",
+    "pdfkit": "^0.16.0",
     "winston": "^3.8.2"
   },
   "devDependencies": {
